Fixed syntax colors, scrollbar.

--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -2,6 +2,18 @@
 // To give it a try, uncomment some of the lines below rebuild your blog, and see how it works.
 // If you need a handy color picker try http://hslpicker.com
 
+$col-superlight-grey: #eee;
+$col-light-grey: #aaa;
+$col-mid-grey: #666;
+$col-dark-grey: #333;
+
+$col-mid-red: #c00;
+
+$col-hot-pink: #fe57a1;
+
+$col-old-white: rgba(240, 229, 218, 1);
+$col-old-white-trans: rgba(240, 229, 218, .1);
+$col-old-blue: rgba(85, 102, 138, 1);
 $col-background: #ddd;
 // Antique White: #faebd7;
 // Mid Grey: #ddd;
@@ -53,18 +65,8 @@ $base1:           #93a1a1; //medium light gray
 
 /* Non highlighted code colors */
 //$pre-bg: $base03;
-$pre-border: lighten($base1, 5);
+//$pre-border: lighten($base1, 5);
+$pre-border: darken(rgba($col-old-white, 1), 5%);
 //$pre-color: $base1;
 
-$col-superlight-grey: #eee;
-$col-light-grey: #aaa;
-$col-mid-grey: #666;
-$col-dark-grey: #333;
 
-$col-mid-red: #c00;
-
-$col-hot-pink: #fe57a1;
-
-$col-old-white: rgba(240, 229, 218, 1);
-$col-old-white-trans: rgba(240, 229, 218, .1);
-$col-old-blue: rgba(85, 102, 138, 1);
