--- a/sass/partials/_syntax.scss
+++ b/sass/partials/_syntax.scss
@@ -12,12 +12,12 @@
     @include box-shadow(lighten($base03, 2) -1px 0 inset);
     text-shadow: lighten($base02, 2) 0 -1px;
   } @else {
-    background: $base02 $syntax-bg !important;
-    border-right: 1px solid $pre-color !important;
+    background: $syntax-bg !important;
+    border-right: 1px solid $pre-border !important;
     @include box-shadow(lighten($base02, 2) -1px 0 inset);
     text-shadow: darken($base02, 10) 0 -1px;
   }
-  span { color: $base01 !important; }
+  span { color: $col-light-grey !important; }
   padding: .8em !important;
   @include border-radius(0);
 }
@@ -201,8 +201,8 @@ p, li {
   overflow-x: auto;
 }
 
-$solar-scroll-bg: rgba(#fff, .15);
-$solar-scroll-thumb: rgba(#fff, .2);
+$solar-scroll-bg: rgba($col-old-white, 1);
+$solar-scroll-thumb: darken(rgba($col-old-white, 1), 8%);
 @if $solarized == light {
   $solar-scroll-bg: rgba(#000, .15);
   $solar-scroll-thumb: rgba(#000, .15);
@@ -234,20 +234,21 @@ figure.code {
 
 .code-title {
   text-align: center;
-  font-size: 13px;
+  font-size: .75em;
   line-height: 2em;
   text-shadow: #cbcccc 0 1px 0;
-  color: #474747;
+  color: $col-dark-grey;
   font-weight: normal;
   margin-bottom: 0;
   @include border-top-radius(5px);
-  font-family: "Helvetica Neue", Arial, "Lucida Grande", "Lucida Sans Unicode", Lucida, sans-serif;
+  //font-family: "Helvetica Neue", Arial, "Lucida Grande", "Lucida Sans Unicode", Lucida, sans-serif;
+  font-family: $mono;
   //background: #aaaaaa image-url("code_bg.png") top repeat-x;
-  background-color: rgba(220, 220, 220, .3);
+  background-color: $col-old-white;
   border: 1px solid $pre-border;
   border-top-color: $pre-border;
-  border-left-color: #a5a5a5;
-  border-right-color: #a5a5a5;
+  border-left-color: $pre-border;
+  border-right-color: $pre-border;
   border-bottom: 0;
 }
 
